# wolf2wad

./: CMakeLists.txt  CONFIG.md  README.md  config.json  spearres.json
src/: config.c  config.h  main.c  map.c  map.h
